Created main script

--- a/solutions/ex3/model_testing.ipynb
+++ b/solutions/ex3/model_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,42 +68,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_1 (Conv2D)            (None, 200, 200, 32)      896       \n",
+      "conv2d_4 (Conv2D)            (None, 200, 200, 32)      896       \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 100, 100, 32)      0         \n",
+      "max_pooling2d_4 (MaxPooling2 (None, 100, 100, 32)      0         \n",
       "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 100, 100, 32)      0         \n",
+      "dropout_5 (Dropout)          (None, 100, 100, 32)      0         \n",
       "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 100, 100, 64)      18496     \n",
+      "conv2d_5 (Conv2D)            (None, 100, 100, 64)      18496     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 50, 50, 64)        0         \n",
+      "max_pooling2d_5 (MaxPooling2 (None, 50, 50, 64)        0         \n",
       "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 50, 50, 64)        0         \n",
+      "dropout_6 (Dropout)          (None, 50, 50, 64)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_3 (Conv2D)            (None, 50, 50, 128)       73856     \n",
+      "conv2d_6 (Conv2D)            (None, 50, 50, 128)       73856     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_3 (MaxPooling2 (None, 25, 25, 128)       0         \n",
+      "max_pooling2d_6 (MaxPooling2 (None, 25, 25, 128)       0         \n",
       "_________________________________________________________________\n",
-      "dropout_3 (Dropout)          (None, 25, 25, 128)       0         \n",
+      "dropout_7 (Dropout)          (None, 25, 25, 128)       0         \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 80000)             0         \n",
+      "flatten_2 (Flatten)          (None, 80000)             0         \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 128)               10240128  \n",
+      "dense_3 (Dense)              (None, 128)               10240128  \n",
       "_________________________________________________________________\n",
-      "dropout_4 (Dropout)          (None, 128)               0         \n",
+      "dropout_8 (Dropout)          (None, 128)               0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 1)                 129       \n",
+      "dense_4 (Dense)              (None, 1)                 129       \n",
       "=================================================================\n",
       "Total params: 10,333,505\n",
       "Trainable params: 10,333,505\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
     "    return img_tensor\n",
     "\n",
     "\n",
-    "def classify(img_path):\n",
+    "def classify(img_path, verbose=False):\n",
     "    # Load a single image\n",
     "    new_image = load_image(img_path)\n",
     "\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
